--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BACKEND_URL=https://edabastecimientosyservicios.com.ar/PERSONAL_CotizadorOnlineMySQL/servicio
+NEXT_PUBLIC_BACKEND_URL=https://api.edabastecimientosyservicios.com.ar/PERSONAL_CotizadorOnlineMySQL/servicio
